View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0024857 | Open CASCADE | OCCT:Coding | public | 2014-04-18 12:21 | 2014-05-05 13:39 |
Reporter | Assigned To | ||||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.7.1 | ||||
Target Version | 6.7.1 | Fixed in Version | 6.7.1 | ||
Summary | 0024857: CLang warnings -Wunused-function | ||||
Description | CLang on Mac OS X 10.9 reports multiple warnings -Wunused-function which in most cases indicate wrong code: DNaming_Line3DDriver.cxx:74:29: warning: unused function 'getLine3DNamingVersionID' [-Wunused-function] XDEDRAW_Props.cxx:492:29: warning: unused function 'doround' [-Wunused-function] | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Unused functions were removed. Changes are located in branch CR24857. Please, review. |
|
No remarks, please test |
|
Dear BugMaster, Branch CR24857 (and products from GIT master) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 5cdb2e94c31bf09d7ba6a14230aac21088f055d5 Number of compiler warnings: occt component : Linux: 18 (18 on master) Windows: 0 (0 on master) MacOS: 408 (410 on master) products component : Linux: 12 (12 on master) Windows: 2 (2 on master) Regressions/Differences: No regressions/differences Testing cases: Not needed Testing on Linux: Total MEMORY difference: 355655692 / 355818864 Total CPU difference: 65184.22999999987 / 55264.28999999973 Testing on Windows: Total MEMORY difference: 379543480 / 381861276 Total CPU difference: 35987.96875 / 43088.59375 There are no differences in images found by testdiff. |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-04-18 12:21 |
|
New Issue | |
2014-04-18 12:21 |
|
Assigned To | => ski |
2014-04-18 12:22 |
|
Status | new => assigned |
2014-04-18 15:16 |
|
Note Added: 0028966 | |
2014-04-18 15:16 |
|
Assigned To | ski => abv |
2014-04-18 15:16 |
|
Status | assigned => resolved |
2014-04-18 17:25 |
|
Assigned To | abv => szy |
2014-04-18 17:28 |
|
Note Added: 0028974 | |
2014-04-18 17:28 |
|
Assigned To | szy => bugmaster |
2014-04-18 17:28 |
|
Status | resolved => reviewed |
2014-04-18 18:19 |
|
Assigned To | bugmaster => mkv |
2014-04-22 20:05 |
|
Note Added: 0029024 | |
2014-04-22 20:05 |
|
Test case number | => Not needed |
2014-04-22 20:05 |
|
Assigned To | mkv => bugmaster |
2014-04-22 20:05 |
|
Status | reviewed => tested |
2014-04-23 10:16 |
|
Target Version | => 6.7.1 |
2014-04-28 10:27 |
|
Changeset attached | => occt master 7759e404 |
2014-04-28 10:27 |
|
Assigned To | bugmaster => abv |
2014-04-28 10:27 |
|
Status | tested => verified |
2014-04-28 10:27 |
|
Resolution | open => fixed |
2014-05-05 13:20 | bugmaster | Status | verified => closed |
2014-05-05 13:39 |
|
Fixed in Version | => 6.7.1 |