0024857: CLang warnings -Wunused-function

Unused functions were removed.